style.css
html { 
	background: url(https://images.unsplash.com/photo-1478369402113-1fd53f17e8b4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60) no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

body {
	font-family: Avenir;
	font-weight: 300;
	color: white;
}

input[type=text] {
	border: 0;
	padding: 0;
	margin: 10px;
	background: transparent;
	letter-spacing: .5em;
	font: 20px Avenir;
	text-align: center;
	border-bottom: 2px solid white;
}

input[type=number] {
	border: 0;
	padding: 0;
	margin: 10px;
	background: transparent;
	letter-spacing: .5em;
	font: 20px Avenir;
	text-align: center;
	border-bottom: 2px solid white;
}

input[type=submit] {
	border: 2px solid white;
	background-color: rgba(255, 255, 255, 0.4);
	color: #202020;
	letter-spacing: 1em;
	width: 60%;
	cursor: pointer;
	text-shadow: 0px 1px white;
}

input[type=reset] {
	border: 2px solid white;
	background-color: rgba(255, 255, 255, 0.4);
	color: #202020;
	letter-spacing: 1em;
	width: 60%;
	cursor: pointer;
	text-shadow: 0px 1px white;
	margin-top: 5px;
}

input::placeholder {
	text-align: center;
	color: white;
	text-shadow: 0px 1px #202020;
  }

.heading {
	font-size: 18px;
	font-weight: 600;
	margin-block-start: .5em;
    margin-block-end: .5em;
}

.newItem {
	width: 90%;
	margin: auto;
	text-align: center;
	background-color: rgba(255, 255, 255, 0.3);
	padding-bottom: 20px;
}

.cardContainer {
	column-width: 300px;
	column-gap: 15px;
	width: 90%;
	max-width: 1200px;
	margin: 50px auto;
}

div.cardContainer .card {
	-webkit-column-break-inside: avoid;
	background: #202020;
	margin: 15px auto;
	padding: 10px;
	border: 2px solid gray;
	transition: opacity .2s ease-in-out;
}

div.cardContainer .card:nth-child(1) {
	margin-top: 0px;
}

div.cardContainer .card .caption {
	font-size: 16px;
	color: white;
}

div.cardContainer:hover .card:not(:hover) {
	opacity: 0.8;
}

.plusClass {
	float: right;
	color: green;
	cursor: pointer;
}

.decreaseClass {
	color: orangered;
	cursor: pointer;
}

.increaseClass {
	color: greenyellow;
	cursor: pointer;
}

.deleteClass {
	float: right;
	color: firebrick;
	font-size: 5px;
	cursor: pointer;
}

.hover:hover {
	color: rgb(255,255,225);
}

